[gd_scene load_steps=29 format=3 uid="uid://ctgiwn3scteuk"]

[ext_resource type="Script" path="res://main/main.gd" id="1_7pb5r"]
[ext_resource type="Script" path="res://modals/modals.gd" id="2_glk8b"]
[ext_resource type="PackedScene" uid="uid://dww5muvu8c87j" path="res://modals/level_parameters_window.tscn" id="5_jupt5"]
[ext_resource type="PackedScene" uid="uid://dcv40f0ranhcs" path="res://modals/squad_enabler_window.tscn" id="6_cohuk"]
[ext_resource type="Script" path="res://main/nav_bar/menu_bar_file.gd" id="6_i86yq"]
[ext_resource type="PackedScene" uid="uid://cwls8s52kffff" path="res://modals/mission_briefing_maps_window.tscn" id="7_p7i0k"]
[ext_resource type="PackedScene" uid="uid://dt41sbmncyves" path="res://modals/player_host_station_window.tscn" id="8_ttnn6"]
[ext_resource type="PackedScene" uid="uid://bn561fiqobkc3" path="res://modals/level_description_window.tscn" id="9_kn1qm"]
[ext_resource type="PackedScene" uid="uid://ddlqlnhwj21fc" path="res://modals/prototype_modifications_window.tscn" id="10_b73kt"]
[ext_resource type="Script" path="res://main/nav_bar/menu_bar_view.gd" id="10_vou7b"]
[ext_resource type="PackedScene" uid="uid://38jgl31xlam5" path="res://modals/game_content_window.tscn" id="11_jobpe"]
[ext_resource type="PackedScene" uid="uid://c3kputnns5tlf" path="res://modals/new_map_window.tscn" id="11_kalue"]
[ext_resource type="PackedScene" uid="uid://duerssxf27lsy" path="res://modals/campaign_maps_window.tscn" id="12_4i7vk"]
[ext_resource type="PackedScene" uid="uid://dfamq5n451pat" path="res://modals/sector_height_window.tscn" id="12_wpowt"]
[ext_resource type="PackedScene" uid="uid://x4kwkajlf23r" path="res://modals/sector_building_window.tscn" id="13_kug0f"]
[ext_resource type="PackedScene" uid="uid://d1s7m85hngi8m" path="res://modals/keyboard_shortcuts_window.tscn" id="13_pa8eg"]
[ext_resource type="PackedScene" uid="uid://c83t7utfh71k1" path="res://modals/about_window.tscn" id="14_i2xml"]
[ext_resource type="Script" path="res://properties/unit_components/host_station/load_behavior_file_dialog.gd" id="15_oqmvu"]
[ext_resource type="Script" path="res://properties/unit_components/host_station/save_behavior_file_dialog.gd" id="16_defsv"]
[ext_resource type="Script" path="res://main/nav_bar/menu_bar_options.gd" id="16_eeds7"]
[ext_resource type="Script" path="res://main/nav_bar/menu_bar_help.gd" id="17_0pxun"]
[ext_resource type="Script" path="res://modals/open_level_file_dialog.gd" id="17_g67l2"]
[ext_resource type="Script" path="res://modals/save_level_file_dialog.gd" id="17_tgjwx"]
[ext_resource type="PackedScene" uid="uid://dy8lh8y52680p" path="res://map/map_container.tscn" id="19_hkn6c"]
[ext_resource type="PackedScene" uid="uid://dg5m8iyihbvmu" path="res://properties/properties_container.tscn" id="20_eh4tf"]

[sub_resource type="ButtonGroup" id="ButtonGroup_238se"]

[sub_resource type="GDScript" id="GDScript_pxw2i"]
script/source = "extends ConfirmationDialog


func _ready() -> void:
	confirmed.connect(func():
		Utils.randomize_whole_typ_map()
		)
"

[sub_resource type="ButtonGroup" id="ButtonGroup_0bwt3"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_7pb5r")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Modals" type="Node" parent="."]
script = ExtResource("2_glk8b")

[node name="NewMapWindow" parent="Modals" instance=ExtResource("11_kalue")]
unique_name_in_owner = true

[node name="SectorHeightWindow" parent="Modals" instance=ExtResource("12_wpowt")]
unique_name_in_owner = true

[node name="SectorBuildingWindow" parent="Modals" instance=ExtResource("13_kug0f")]
unique_name_in_owner = true
visible = false

[node name="LevelParametersWindow" parent="Modals" instance=ExtResource("5_jupt5")]
unique_name_in_owner = true
visible = false

[node name="SquadEnablerWindow" parent="Modals" instance=ExtResource("6_cohuk")]
unique_name_in_owner = true
visible = false

[node name="MissionBriefingMapsWindow" parent="Modals" instance=ExtResource("7_p7i0k")]
unique_name_in_owner = true
visible = false

[node name="PlayerHostStationWindow" parent="Modals" instance=ExtResource("8_ttnn6")]
unique_name_in_owner = true
visible = false
button_group = SubResource("ButtonGroup_238se")

[node name="LevelDescriptionWindow" parent="Modals" instance=ExtResource("9_kn1qm")]
unique_name_in_owner = true
visible = false

[node name="PrototypeModificationsWindow" parent="Modals" instance=ExtResource("10_b73kt")]
unique_name_in_owner = true
visible = false

[node name="RandomizeTypMapConfirmationDialog" type="ConfirmationDialog" parent="Modals"]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(966, 100)
ok_button_text = "Yes"
dialog_text = "This will change the building in every sector based on the selected level set. Are you sure you want to proceed?"
cancel_button_text = "No"
script = SubResource("GDScript_pxw2i")

[node name="GameContentWindow" parent="Modals" instance=ExtResource("11_jobpe")]
unique_name_in_owner = true
visible = false
button_group = SubResource("ButtonGroup_0bwt3")

[node name="CampaignMapsWindow" parent="Modals" instance=ExtResource("12_4i7vk")]
unique_name_in_owner = true
visible = false

[node name="KeyboardShortcutsWindow" parent="Modals" instance=ExtResource("13_pa8eg")]
unique_name_in_owner = true
visible = false

[node name="AboutWindow" parent="Modals" instance=ExtResource("14_i2xml")]
unique_name_in_owner = true
visible = false

[node name="LoadBehaviorFileDialog" type="FileDialog" parent="Modals"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(810, 450)
ok_button_text = "Open"
file_mode = 0
access = 2
script = ExtResource("15_oqmvu")

[node name="SaveBehaviorFileDialog" type="FileDialog" parent="Modals"]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(810, 450)
ok_button_text = "Save"
access = 2
script = ExtResource("16_defsv")

[node name="SaveLevelFileDialog" type="FileDialog" parent="Modals"]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(900, 600)
access = 2
filters = PackedStringArray("*.ldf;Urban Assault Level File")
script = ExtResource("17_tgjwx")

[node name="OpenLevelFileDialog" type="FileDialog" parent="Modals"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(900, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.ldf;Urban Assault Level File")
script = ExtResource("17_g67l2")

[node name="UnsavedMapConfirmationDialog" type="ConfirmationDialog" parent="Modals"]
unique_name_in_owner = true
initial_position = 1
ok_button_text = "Yes"
dialog_text = "The current map is not saved. Do you want to save it now?"
cancel_button_text = "No"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2

[node name="File" type="PopupMenu" parent="PanelContainer/MarginContainer/VBoxContainer/MenuBar"]
auto_translate_mode = 1
script = ExtResource("6_i86yq")

[node name="View" type="PopupMenu" parent="PanelContainer/MarginContainer/VBoxContainer/MenuBar"]
auto_translate_mode = 1
script = ExtResource("10_vou7b")

[node name="Options" type="PopupMenu" parent="PanelContainer/MarginContainer/VBoxContainer/MenuBar"]
script = ExtResource("16_eeds7")

[node name="Help" type="PopupMenu" parent="PanelContainer/MarginContainer/VBoxContainer/MenuBar"]
script = ExtResource("17_0pxun")

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 1
theme_override_constants/minimum_grab_thickness = 1
split_offset = 750

[node name="MapContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("19_hkn6c")]
layout_mode = 2

[node name="PropertiesContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("20_eh4tf")]
unique_name_in_owner = true
visible = false
layout_mode = 2
